hopefully fixed navbar on mobile

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -155,11 +155,11 @@ body{
 /* The side navigation menu */
 .enclave{
   display: flex;
+  flex-wrap: wrap;
   flex-direction: row;
   background-color:var(--black-3);
-  height: 42px;
-  width: 24%;
-  min-width: 700px;
+  height: auto;
+  width: 38%;
   border-radius: 5px;
   padding: 2px;
 }
